@@ -1461,6 +1461,15 @@ stopifnot(beta(B, 4*B) == 0,
 ## no longer warns - as we require IEEE_745
 
 
+## as reg-tests-1<ch>.R run with LC_ALL=C  -- test Sys.setLanguage() here
+try( 1 + "2")
+oL <- Sys.setLanguage("fr")
+(out <- tryCmsg(1 + "2"))
+if(attr(oL, "ok") && capabilities("NLS") && !is.na(.popath))
+   stopifnot(grepl("^argument non num.rique pour un ", out))
+## was *not* switched to French (when this was run via 'make ..')
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
